# money_gold_demo_rust

./: Cargo.toml  README.md
src/: main.rs
src/application/: Cargo.toml
src/application/src/: account_repository.rs  data.rs  events.rs  exceptions.rs  id_provider.rs  lib.rs  services.rs  spi.rs  use_case.rs
src/core/: Cargo.toml
src/core/src/: data_object.rs  gold_transfer.rs  lib.rs
src/web/: Cargo.toml
src/web/src/: app.rs  controller.rs  event_queue.rs  events.rs  exceptions.rs  http_response.rs  lib.rs  router.rs  transfer_gold_module.rs
