[package]
name = "banking_demo_application"
version = "0.1.0"
edition = "2021"

[dependencies]
banking_demo_core = {path = "../core"}
async-trait = "0.1.85"
tokio = {version =  "1.43.0", features = ["full"] }
tokio-macros = "2.5.0"
uuid = { version = "1.12.1", features = ["v4"] }
serde = { version = "1.0.217", features = ["derive"] }
