[package]
name = "banking_demo_web"
version = "0.1.0"
edition = "2021"

[dependencies]
banking_demo_application = {path = "../application"}
axum = "0.8.1"
serde_json = "1.0.137"
serde = { version = "1.0.217", features = ["derive"] }
tokio = "1.43.0"
async-trait = "0.1.85"
tower = "0.5.2"
hyper = "1.5.2"